--- a/Components/Content/content.html
+++ b/Components/Content/content.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Content</title>
+    <link rel="stylesheet" href="content.css">
 </head>
 <body>
-    
+    <div class="content">
+        <!--PART1 : EPISODES-->
+        <div class="L1">
+            <img src="../../Assets/Images/Episodes.svg"  class="I1" alt="Not Found"/>
+            <div class="text1">
+                <h2 class="T1"><span class="span">EPISODE</span>S</h2>
+                <p class="P1">In Moroccan Success Story episodes, we invite a
+                     Moroccan icon in the IT and related fields, to share
+                      their experiences, lessons learned and knowledge 
+                      with the Moroccan community.</p>
+            </div>
+        </div>
+        <!--PART2 : NEWS -->
+        <div class="L2">
+            <img src="../../Assets/Images/News.svg"  class="I1" alt="Not Found"/>
+            <div class="text1">
+                <h2 class="T1"><span class="span">NEW</span>S</h2>
+                <p class="P1">In Moroccan Success Story episodes, we invite 
+                    a Moroccan icon in the IT and related fields, to share 
+                    their experiences, lessons learned and knowledge 
+                    with the Moroccan community.</p>
+            </div>
+        </div>
+
+          <!--PART3 : PROBLEM SOLVING -->
+          <div class="L3">
+            <img src="../../Assets/Images/Problem solving.svg"  class="I3" alt="Not Found"/>
+            <div class="text1">
+                <h2 class="T1"><span class="span">PROBLEM SOLV</span>ING</h2>
+                <p class="P1">In Moroccan Success Story episodes, we invite 
+                    a Moroccan icon in the IT and related fields, to share 
+                    their experiences, lessons learned and knowledge 
+                    with the Moroccan community.</p>
+            </div>
+        </div>
+
+          <!--PART4 : JOBS OFFERS -->
+          <div class="L4">
+            <img src="../../Assets/Images/Jobs offers.svg"  class="I1" alt="Not Found"/>
+            <div class="text1">
+                <h2 class="T1"><span class="span">JOBS OFFE</span>RS</h2>
+                <p class="P1">In Moroccan Success Story episodes, we invite 
+                    a Moroccan icon in the IT and related fields, to share 
+                    their experiences, lessons learned and knowledge 
+                    with the Moroccan community.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
