--- a/Components/Content/content.css
+++ b/Components/Content/content.css
@@ -1,107 +1,100 @@
-body{
+/* START GLOBAL RULES */
+* {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
     padding:0;
     margin:0;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 }
 
-.content{
-    height:100%;
-    width:100%;
+.container {
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+/* MEDIA QUERY */
+/* SMALL */
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+
+/* MEDIUM */
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+
+/* LARGE */
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+/* END GLOBAL RULES */
+
+/* START CONTENT SECTION */
+.content {
     background-color:#1D1E4F;
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
-    
 }
 
-.L1{
-    height: 350px;
-    width:100%;
-    margin-top: 50px;
-    display:flex;
-    justify-content:space-evenly;
-    align-items:center;
+.content-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:space-around;
+    padding-top: 50px;
 }
 
-/*Image*/
-.I1{
-    height:300px;
+.content-box .image {
+    height: 250px;
 }
 
-/*Title and Paragraph*/
-.text1{
-    height:200px;
-    width:24%;
-    color:white;
-}
-.T1{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
+.content-box .text {
+    width: 350px;
 }
 
-.span{
+.content-box .text .title {
+    font-size: 30px;
+    font-weight: 700;
+    color: #FFFFFF;
+    display: inline-block;
     border-bottom: 3px solid #B056E1;
+    margin: 0;
+}
+
+.content-box .text .paragraphe {
+    font-size: 14px;
+    font-weight: 300;
+    color: #D0D0D0;
+    padding-top: 15px;
+}
+
+@media (max-width: 768px) {
+    .content-box {
+        flex-direction: column;
+    }
+
+    .content-box .text {
+        width: 80%;
+    }
+    .content-box .image {
+        display: none;
+    }
+
+    .content-box .text .title {
+        text-align: center;
+        font-size: 25px;
+    }
 
 }
 
-.S{
-    text-decoration: none;
-}
-
-.P1{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: lighter;
-    margin-top: 25px;
-}
-
-
-/*PART2 : NEWS */
-.L2{
-    height: 350px;
-    width:100%;
-    flex-direction: row-reverse;
-    display:flex;
-    justify-content:space-evenly;
-    align-items:center;
-    margin-top:50px;
-}
-
-
-/*PART 3 : PROBLEM SOLVING*/
-
-.L3{
-    height: 350px;
-    width:100%;
-    display:flex;
-    justify-content:space-evenly;
-    align-items:center;
-    margin-top:50px;
-}
-
-.I3{
-    width:400px;
-}
-
-
-/*PART 3 :  JOBS OFFERS */
-
-.L4{
-    height: 350px;
-    width:100%;
-    display:flex;
-    flex-direction: row-reverse;
-    justify-content:space-evenly;
-    align-items:center;
-    margin-top:50px;
-}
-
-
-/* WACHHHHH ALMOURABIT */
-
-
-
-
-
-
-
+/* END CONTENT SECTION */
