--- a/Components/Content/content.html
+++ b/Components/Content/content.html
@@ -4,55 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Content</title>
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="content.css">
+    <!-- TITLE -->
+    <title>Content</title>
 </head>
 <body>
     <div class="content">
-        <!--PART1 : EPISODES-->
-        <div class="L1">
-            <img src="../../Assets/Images/Episodes.svg"  class="I1" alt="Not Found"/>
-            <div class="text1">
-                <h2 class="T1"><span class="span">EPISODE</span>S</h2>
-                <p class="P1">In Moroccan Success Story episodes, we invite a
-                     Moroccan icon in the IT and related fields, to share
-                      their experiences, lessons learned and knowledge 
-                      with the Moroccan community.</p>
+        <div class="container">
+            <!--PART1 : EPISODES-->
+            <div class="content-box">
+                <img class="image" src="../../Assets/Images/Episodes.svg" alt="Not Found"/>
+                <div class="text">
+                    <h2 class="title">Episodes</h2>
+                    <p class="paragraphe">
+                        In Moroccan Success Story episodes, we invite a
+                        Moroccan icon in the IT and related fields, to share
+                        their experiences, lessons learned and knowledge 
+                        with the Moroccan community.
+                    </p>
+                </div>
             </div>
-        </div>
-        <!--PART2 : NEWS -->
-        <div class="L2">
-            <img src="../../Assets/Images/News.svg"  class="I1" alt="Not Found"/>
-            <div class="text1">
-                <h2 class="T1"><span class="span">NEW</span>S</h2>
-                <p class="P1">In Moroccan Success Story episodes, we invite 
-                    a Moroccan icon in the IT and related fields, to share 
-                    their experiences, lessons learned and knowledge 
-                    with the Moroccan community.</p>
-            </div>
-        </div>
 
-          <!--PART3 : PROBLEM SOLVING -->
-          <div class="L3">
-            <img src="../../Assets/Images/Problem solving.svg"  class="I3" alt="Not Found"/>
-            <div class="text1">
-                <h2 class="T1"><span class="span">PROBLEM SOLV</span>ING</h2>
-                <p class="P1">In Moroccan Success Story episodes, we invite 
-                    a Moroccan icon in the IT and related fields, to share 
-                    their experiences, lessons learned and knowledge 
-                    with the Moroccan community.</p>
+            <!--PART2 : News -->
+            <div class="content-box">
+                <div class="text">
+                    <h2 class="title">News</h2>
+                    <p class="paragraphe">
+                        In Moroccan Success Story episodes, we invite a
+                        Moroccan icon in the IT and related fields, to share
+                        their experiences, lessons learned and knowledge 
+                        with the Moroccan community.
+                    </p>
+                </div>
+                <img class="image" src="../../Assets/Images/News.svg" alt="Not Found"/>
             </div>
-        </div>
-
-          <!--PART4 : JOBS OFFERS -->
-          <div class="L4">
-            <img src="../../Assets/Images/Jobs offers.svg"  class="I1" alt="Not Found"/>
-            <div class="text1">
-                <h2 class="T1"><span class="span">JOBS OFFE</span>RS</h2>
-                <p class="P1">In Moroccan Success Story episodes, we invite 
-                    a Moroccan icon in the IT and related fields, to share 
-                    their experiences, lessons learned and knowledge 
-                    with the Moroccan community.</p>
+            
+            <!--PART3 : Problem Solving -->
+            <div class="content-box">
+                <img class="image" src="../../Assets/Images/problem_solving.svg" alt="Not Found"/>
+                <div class="text">
+                    <h2 class="title">Problem Solving</h2>
+                    <p class="paragraphe">
+                        In Moroccan Success Story episodes, we invite a
+                        Moroccan icon in the IT and related fields, to share
+                        their experiences, lessons learned and knowledge 
+                        with the Moroccan community.
+                    </p>
+                </div>
+            </div>
+        
+        
+            <!--PART4 : Jobs Offers -->
+            <div class="content-box">
+                <div class="text">
+                    <h2 class="title">Jobs Offers</h2>
+                    <p class="paragraphe">
+                        In Moroccan Success Story episodes, we invite a
+                        Moroccan icon in the IT and related fields, to share
+                        their experiences, lessons learned and knowledge 
+                        with the Moroccan community.
+                    </p>
+                </div>
+                <img class="image" src="../../Assets/Images/jobs_offers.svg" alt="Not Found"/>
             </div>
         </div>
     </div>
