--- a/Components/FollowUs/followus.html
+++ b/Components/FollowUs/followus.html
@@ -14,10 +14,11 @@
     <!--FONT AWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--TITLE-->
-    <title>Document</title>
+    <title>Follow Us</title>
 </head>
 <body>
-    <div class="followUs">
+    <!-- START FOLLOW US SECTION -->
+    <div class="follow-us">
         <div class="container">
             <div class="content">
                 <h2>Follow Us</h2>
@@ -37,8 +38,9 @@
             </div>
         </div>
     </div>
+    <!-- START FOLLOW US SECTION -->
 
-    <!-- START FOOTER SECTION-->
+    <!-- START FOOTER SECTION -->
     <footer>
         <p>
             © DevC Oujda 2022
@@ -47,6 +49,6 @@
             This Website is made with 🤍 By DevC Oujda Team | Sourced on GitHub
         </p>
     </footer>
-    <!-- END FOOTER SECTION-->
+    <!-- END FOOTER SECTION -->
 </body>
 </html>
