--- a/Components/Header/header.html
+++ b/Components/Header/header.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--META-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="./Header.css">
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--TITLE-->
+    <title>Header</title>
 </head>
 <body>
-    
+   <div class="header">
+            <nav>
+                <div class="nav-content">
+                    <ul>
+                        <li> <a href="#"> Home </a></li>
+                        <li> <a href="#"> Episodes </a></li>
+                        <li> <a href="#"> News </a></li>
+                        <li> <a href="#"> Problem of the day </a></li>
+                        <li> <a href="#"> Jobs </a></li>
+                    </ul>
+                    <button>About Us</button>
+                </div>
+            </nav>
+            <div class="container">
+                <div class="content">
+                    <div class="left-side">
+                        <div class="paragraphe">
+                            <h1>
+                                Welcome to cs bdarija !
+                            </h1>
+                            <p>
+                                XXXXXXXX is a community initiative, to discuss, highlight and share the latest IT topics in Moroccan Darija.
+                            </p>
+                        </div>
+                        <div class="social-media">
+                            <ul>
+                                <li><i class="fa-brands fa-youtube"></i></li>
+                                <li><i class="fa-brands fa-linkedin"></i></li>
+                                <li><i class="fa-brands fa-twitter"></i></li>
+                                <li><i class="fa-brands fa-facebook"></i></li>
+                                <li><i class="fa-brands fa-spotify"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <img src="../../Assets/Images/Programmer.svg" alt="Not Found">
+            </div>
+        </div>
+   </div>
 </body>
 </html>
