--- a/Components/News/News.html
+++ b/Components/News/News.html
@@ -18,7 +18,7 @@
 </head>
 <body>
    <div class="news">
-        <nav>
+       <!--  <nav>
             <img src="#" alt="LOGO">
             <ul>
                 <li> <a href="#"> Home </a></li>
@@ -28,108 +28,105 @@
                 <li> <a href="#"> Jobs </a></li>
             </ul>
             <button>About Us</button>
-        </nav>
+        </nav> -->
         <div class="container">
-            <div class="content">
-                <a href="#" class="article"> 
-                    <img src="../../Assets/Images/article01.svg" alt="Not Found">
-                    <div class="article-info">
-                        <h3>Perforce expands its DevOps portfolio 
-                            with Puppet acquisition
-                        </h3>
+            <a href="#" class="article"> 
+                <img src="../../Assets/Images/article01.svg" alt="Not Found">
+                <div class="paragraph">
+                    <h3>Perforce expands its DevOps portfolio 
+                        with Puppet acquisition
+                    </h3>
+                    <p>Perforce is expanding its portfolio of DevOps tools 
+                        with the acquisition of Puppet, an infrastructure 
+                        as code pioneer...
+                    </p>
+                    <div class="details">
+                        <p>12/05/2022 </p>
+                        <p>By: Ibtissam Neggaoui </p>
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="article">
+                <img src="../../Assets/Images/article02.svg" alt="Not Found">
+                <div class="paragraph">
+                    <h3>Perforce expands its DevOps portfolio 
+                        with Puppet acquisition
+                    </h3>
+                    <p>Perforce is expanding its portfolio of DevOps tools 
+                        with the acquisition of Puppet, an infrastructure 
+                        as code pioneer...
+                    </p>
+                    <div class="details">
+                        <p>12/05/2022 </p>
+                        <p>By: Ibtissam Neggaoui </p>
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="article">
+                <img src="../../Assets/Images/article03.svg" alt="Not Found">
+                <div class="paragraph">
+                    <h3>Perforce expands its DevOps portfolio 
+                        with Puppet acquisition
+                    </h3>
+                    <p>Perforce is expanding its portfolio of DevOps tools 
+                        with the acquisition of Puppet, an infrastructure 
+                        as code pioneer...
+                    </p>
+                    <div class="details">
+                        <p>12/05/2022 </p>
+                        <p>By: Ibtissam Neggaoui </p>
+                    </div>
+                    </div>
+            </a>
+            <a href="#" class="article">
+                <img src="../../Assets/Images/article04.svg" alt="Not Found">
+                <div class="paragraph">
+                    <h3>Perforce expands its DevOps portfolio 
+                        with Puppet acquisition
+                    </h3>
+                    <p>Perforce is expanding its portfolio of DevOps tools 
+                        with the acquisition of Puppet, an infrastructure 
+                        as code pioneer...
+                    </p>
+                    <div class="details">
+                        <p>12/05/2022 </p>
+                        <p>By: Ibtissam Neggaoui </p>
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="article">
+                <img src="../../Assets/Images/article05.svg" alt="Not Found">
+                <div class="paragraph">
+                    <h3>Perforce expands its DevOps portfolio 
+                        with Puppet acquisition
+                    </h3>
+                    <p>Perforce is expanding its portfolio of DevOps tools 
+                        with the acquisition of Puppet, an infrastructure 
+                        as code pioneer...
+                    </p>
+                    <div class="details">
+                        <p>12/05/2022 </p>
+                        <p>By: Ibtissam Neggaoui </p>
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="article">
+                <img src="../../Assets/Images/article06.svg" alt="Not Found">
+                <div class="paragraph">
+                    <h3>Perforce expands its DevOps portfolio 
+                        with Puppet acquisition
+                    </h3>
                         <p>Perforce is expanding its portfolio of DevOps tools 
                             with the acquisition of Puppet, an infrastructure 
                             as code pioneer...
                         </p>
-                        <div class="article-pub-infos">
-                            <p>12/05/2022 </p>
-                            <p>By: Ibtissam Neggaoui </p>
-                        </div>
+                    <div class="details">
+                        <p>12/05/2022 </p>
+                        <p>By: Ibtissam Neggaoui </p>
                     </div>
-                </a>
-                <a href="#" class="article">
-                    <img src="../../Assets/Images/article02.svg" alt="Not Found">
-                    <div class="article-info">
-                        <h3>Perforce expands its DevOps portfolio 
-                            with Puppet acquisition
-                        </h3>
-                        <p>Perforce is expanding its portfolio of DevOps tools 
-                            with the acquisition of Puppet, an infrastructure 
-                            as code pioneer...
-                        </p>
-                        <div class="article-pub-infos">
-                            <p>12/05/2022 </p>
-                            <p>By: Ibtissam Neggaoui </p>
-                        </div>
-                    </div>
-                </a>
-                <a href="#" class="article">
-                    <img src="../../Assets/Images/article03.svg" alt="Not Found">
-                    <div class="article-info">
-                        <h3>Perforce expands its DevOps portfolio 
-                            with Puppet acquisition
-                        </h3>
-                        <p>Perforce is expanding its portfolio of DevOps tools 
-                            with the acquisition of Puppet, an infrastructure 
-                            as code pioneer...
-                        </p>
-                        <div class="article-pub-infos">
-                            <p>12/05/2022 </p>
-                            <p>By: Ibtissam Neggaoui </p>
-                        </div>
-                        </div>
-                </a>
-                <a href="#" class="article">
-                    <img src="../../Assets/Images/article04.svg" alt="Not Found">
-                    <div class="article-info">
-                        <h3>Perforce expands its DevOps portfolio 
-                            with Puppet acquisition
-                        </h3>
-                        <p>Perforce is expanding its portfolio of DevOps tools 
-                            with the acquisition of Puppet, an infrastructure 
-                            as code pioneer...
-                        </p>
-                        <div class="article-pub-infos">
-                            <p>12/05/2022 </p>
-                            <p>By: Ibtissam Neggaoui </p>
-                        </div>
-                    </div>
-                </a>
-                <a href="#" class="article">
-                    <img src="../../Assets/Images/article05.svg" alt="Not Found">
-                    <div class="article-info">
-                        <h3>Perforce expands its DevOps portfolio 
-                            with Puppet acquisition
-                        </h3>
-                        <p>Perforce is expanding its portfolio of DevOps tools 
-                            with the acquisition of Puppet, an infrastructure 
-                            as code pioneer...
-                        </p>
-                        <div class="article-pub-infos">
-                            <p>12/05/2022 </p>
-                            <p>By: Ibtissam Neggaoui </p>
-                        </div>
-                    </div>
-                </a>
-                <a href="#" class="article">
-                    <img src="../../Assets/Images/article06.svg" alt="Not Found">
-                    <div class="article-info">
-                        <h3>Perforce expands its DevOps portfolio 
-                            with Puppet acquisition
-                        </h3>
-                            <p>Perforce is expanding its portfolio of DevOps tools 
-                                with the acquisition of Puppet, an infrastructure 
-                                as code pioneer...
-                            </p>
-                        <div class="article-pub-infos">
-                            <p>12/05/2022 </p>
-                            <p>By: Ibtissam Neggaoui </p>
-                        </div>
-                    </div>
-                </a>  
-                <button href="#" class="btn-learn-more"> Load More </button>  
-            </div>
-           <!--  <button href="#" class="btn-learn-more"> Load More </button>   -->
+                </div>
+            </a>  
         </div>
+        <button href="#" class="btn-learn-more"> Load More </button>  
     </div>
 </body>
