--- a/Components/FollowUs/followus.css
+++ b/Components/FollowUs/followus.css
@@ -18,6 +18,12 @@ body {
     padding: 0 15px;
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 /* MEDIA QUERY */
 /* SMALL */
 @media (min-width: 768px) {
@@ -45,83 +51,92 @@ body {
  .follow-us {
     background-color: #692E81;
     padding: 30px 0px 60px ;
-    
  }
 
- .follow-us .content h2{
-    margin:0;
-    text-align:center;
-    color:#FFFFFF;
-    font-size:35px;
+ .follow-us .content h2 {
+    display: inline-block;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+    color: #FFFFFF;
+    font-size: 35px;
     font-weight: 700;
+    text-transform: uppercase;
  }
 
- .follow-us .content p{
-    color:#D7D7D7;
+ .follow-us .content h2::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 90%;
+    background-color: #ffffff;
+    bottom: 0;
+    left: 10px;
+ }
+
+ .follow-us .content p {
+    color: #D7D7D7;
     font-size: 14px;
-    text-align:center;
-    width:60%;
-    margin:0 auto;
-    padding:30px 0px;
+    text-align: center;
+    width: 60%;
+    margin: 0 auto;
+    padding: 30px 0px;
  }
 
- .follow-us .social-media{
-    width:60%;
+ .follow-us .social-media {
+    width: 60%;
     margin: 0px auto;
  }
 
- .follow-us .social-media ul{
-    list-style-type: none;
-    display:flex;
-    justify-content:space-evenly;
-    flex-wrap:wrap;
-    margin:0;
-    padding:0;
+ .follow-us .social-media ul {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
  }
 
- .follow-us .social-media ul li{
+ .follow-us .social-media ul li {
     background-color: #FFFFFF;
-    padding:25px;
+    padding: 15px 20px;
     border-radius: 50%;
-    font-size:30px;
+    font-size: 40px;
  }
 
- .follow-us .social-media ul li:nth-child(1){
+ .follow-us .social-media ul li:nth-child(1) {
     color: #FF0000;
  }
 
- .follow-us .social-media ul li:nth-child(2){
+ .follow-us .social-media ul li:nth-child(2) {
     color: #0072B1;
 }
 
-.follow-us .social-media ul li:nth-child(3){
+.follow-us .social-media ul li:nth-child(3) {
     color: #00ACEE;
 }
 
-.follow-us .social-media ul li:nth-child(4){
+.follow-us .social-media ul li:nth-child(4) {
     color: #4267B2;
 }
 
-.follow-us .social-media ul li:nth-child(5){
+.follow-us .social-media ul li:nth-child(5) {
     color: #1DB954;
 }
 
-
 @media (max-width: 768px) {
-    .follow-us .content p{
-        width:80%;
+    .follow-us .content p {
+        width: 80%;
     }
 
-    .follow-us .social-media{
-        width:100%;
+    .follow-us .social-media {
+        width: 100%;
     }
 
-    .follow-us .social-media ul li{
+    .follow-us .social-media ul li {
         background-color: #FFFFFF;
-        padding:15px;
+        padding:  15px;
         margin:5px;
         border-radius: 50%;
-        font-size:30px;
+        font-size: 30px;
      }
 }
 /* END FOLLOW US SECTION */
@@ -129,28 +144,27 @@ body {
 /* START FOOTER SECTION */
 footer {
     background-color: #000000;
-    display:flex;
-    justify-content:space-between;
+    display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
-footer p{
-    color:#FFFFFF;
-    margin:0; 
+footer p {
+    color: #FFFFFF;
+    margin: 0; 
     padding: 20px;
-    font-size:14px;
+    font-size: 14px;
     text-align: center;
 }
 
-
 @media (max-width: 768px) {
-    footer p{
+    footer p {
         margin: 0 auto;
     }
     
     footer p:last-child {
-        padding-top:0;
-        padding-bottom:30px;
+        padding-top: 0;
+        padding-bottom: 30px;
     }
 }
 /* END FOOTER SECTION */
