cs-1: header section added

--- a/Components/Header/header.html
+++ b/Components/Header/header.html
@@ -17,9 +17,14 @@
     <title>Header</title>
 </head>
 <body>
-   <div class="header">
-            <nav>
-                <div class="nav-content">
+    <!-- START HEADER SECTION -->
+   <header>
+        <div class="container">
+                <a href="#">
+                    <img class="logo" src="#" alt="logo">
+                </a>
+                <nav>
+                    <i class="fas fa-bars toggle-menu"></i>
                     <ul>
                         <li> <a href="#"> Home </a></li>
                         <li> <a href="#"> Episodes </a></li>
@@ -28,32 +33,34 @@
                         <li> <a href="#"> Jobs </a></li>
                     </ul>
                     <button>About Us</button>
-                </div>
-            </nav>
-            <div class="container">
-                <div class="content">
-                    <div class="left-side">
-                        <div class="paragraphe">
-                            <h1>
-                                Welcome to cs bdarija !
-                            </h1>
-                            <p>
-                                XXXXXXXX is a community initiative, to discuss, highlight and share the latest IT topics in Moroccan Darija.
-                            </p>
-                        </div>
-                        <div class="social-media">
-                            <ul>
-                                <li><i class="fa-brands fa-youtube"></i></li>
-                                <li><i class="fa-brands fa-linkedin"></i></li>
-                                <li><i class="fa-brands fa-twitter"></i></li>
-                                <li><i class="fa-brands fa-facebook"></i></li>
-                                <li><i class="fa-brands fa-spotify"></i></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <img src="../../Assets/Images/Programmer.svg" alt="Not Found">
-            </div>
+                </nav>
         </div>
-   </div>
+    </header>
+    <!-- END HEADER SECTION -->
+
+    <!-- START WELCOME SECTION -->
+    <div class="welcome">
+        <div class="container">
+            <div class="paragraph">
+                    <h1>
+                        Welcome to cs bdarija !
+                    </h1>
+                    <p>
+                        XXXXXXXX is a community initiative, to discuss, highlight and share the latest IT topics in Moroccan Darija.
+                    </p>
+                <div class="social-media">
+                    <ul>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                        <li><i class="fa-brands fa-linkedin"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-facebook"></i></li>
+                        <li><i class="fa-brands fa-spotify"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <img src="../../Assets/Images/Programmer.svg" alt="Not Found">
+        </div>
+    </div>
+    <!-- END WELCOME SECTION -->
 </body>
 </html>
