--- a/Components/Header/header.css
+++ b/Components/Header/header.css
@@ -11,11 +11,21 @@ body {
     font-family: 'Open Sans', sans-serif;
     padding:0;
     margin:0;
+    background-image: url(../../Assets/Images/Background.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
 
 .container {
     margin: 0 auto;
     padding: 0 15px;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 /* MEDIA QUERY */
@@ -42,149 +52,209 @@ body {
 /* END GLOBAL RULES */
 
 /* START HEADER SECTION */
-.header {
-    background-image: url(../../Assets/Images/Background.svg);
-    height: 100vh;
-    width: 100%; 
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-/* NAV SECTION */
-.header nav { 
-    height: 60px;
+header { 
     width: 100%;
     margin:0;
     background-color: #00020d48;
 }
 
-.header nav .nav-content {
-    height:100%;
-    width:65%;
-    margin-right:20px;
-    float: right;
+header .container {
     display: flex;
     justify-content: space-between; 
+    align-items: center;
+    min-height: 60px;
 } 
 
-.header nav ul {
-    list-style-type: none;
+header nav {
+    flex: 1;
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
 }
 
-.header nav ul li {
-    margin-right: 35px;
+header nav .toggle-menu {
+    font-size: 25px;
 }
 
-.header nav li a {
+@media (min-width: 768px) {
+    header nav .toggle-menu {
+        display: none;
+    }
+}
+
+header ul {
+    display: flex;
+    margin: 0 auto;
+}
+
+header ul li a {
+    display: block;
+    position: relative;
     text-decoration: none;
     color: #ffffff;
     font-size: 14px;
+    padding: 15px;
+    transition: 0.3s;
 }
 
-.header nav button {
-    background-color: #7449D2;
+header button {
     height: 40px;
     width: 140px;
+    background-color: #7449D2;
     color: white;
     font-weight: 600;
     border: none;
     border-radius: 12px;
-    align-self: center;
 }
-/* END NAV SECTION */ 
 
-/* START CONTENT SECTION */
-.header .content {
-    height: 80%;
-    width: 95% ;
-    margin: 0;
-    padding: 8% 0;
+header button:hover {
+    background-color: #633eb5;
+    color: white;
+    font-weight: 700;
+}
+
+@media (max-width: 767px) {
+    header nav ul, header button {
+        display: none;
+    }
+
+    header nav .toggle-menu:hover + ul {
+        display: flex;
+        position: absolute;
+        flex-direction: column;
+        padding: 15px 0;
+        width: calc(100% + 50px);
+        top: calc(100% + 17.5px);
+        background-color: #1D1E4Ff0;
+    }
+
+    header nav ul li {
+        border-bottom: 1px solid #B056E1;
+    }
+
+    header nav ul li a {
+        text-align: center;
+        font-size: 18px;
+    }
+
+    header nav ul li:hover {
+        background-color: #1D1E4F;
+    }
+}
+/* END HEADER SECTION */ 
+
+/* START WELCOME SECTION */
+.welcome {
+    margin: 5% auto;
+}
+
+.welcome .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;  
 }
 
-.header .content img{
-    height:60%;
-    width:40%;
+.welcome img {
+    width: 40%;
+    height: 50%;
 }
 
-.header .content .left-side {
-    height:100%;
-    width:60%;
- } 
-
-.header .content .left-side .paragraphe h1 {
+.welcome .paragraph h1 {
     font-size: 40px;
     font-weight: 700;
     color:#ffffff;
     text-transform: uppercase;
-    margin:5% 0;
+    margin: 0 ;
 }
 
-.header .content .left-side .paragraphe p {
-    font-size: 14px;
+.welcome .paragraph p {
+    width: 90%;
+    font-size: 12px;
     color:#ffffff;
-    margin:0 0 5%;
+    line-height: 1.5;
 }
 
-.header .content .left-side .social-media ul{
-    width: 80%;
-    list-style-type: none;
+.welcome .social-media ul{
     display:flex;
     justify-content:space-evenly;
-    flex-wrap:wrap;
-    margin:5% 10%;
-    padding:0;
+    margin: 30px auto;
  }
 
- .header .content .left-side .social-media ul li{
+ .welcome .social-media ul li{
     background-color: #FFFFFF;
-    padding:4px 10px;
-    margin-right:1%;
     border-radius: 30%;
     font-size:32px;
+    padding:4px 10px;
  }
 
- .header .content .left-side .social-media ul li:nth-child(1){
+ .welcome  .social-media ul li:nth-child(1){
     color: #FF0000;
  }
 
- .header .content .left-side  .social-media ul li:nth-child(2){
+ .welcome   .social-media ul li:nth-child(2){
     color: #0072B1;
 }
 
-.header .content .left-side  .social-media ul li:nth-child(3){
+.welcome   .social-media ul li:nth-child(3){
     color: #00ACEE;
 }
 
-.header .content .left-side  .social-media ul li:nth-child(4){
+.welcome   .social-media ul li:nth-child(4){
     color: #4267B2;
 }
 
-.header .content .left-side  .social-media ul li:nth-child(5){
+.welcome   .social-media ul li:nth-child(5){
     color: #1DB954;
 }
 
-@media (max-width: 768px) {
-    .header .content{
-        flex-direction: column-reverse;
-    }
-    
-    .header .content img{
-        height:50%;
-        width:50%;
+@media (min-width: 992px) and (max-width: 1199px) {
+    .welcome {
+        margin: 10% auto;
     }
 
-    .header .content .left-side .social-media ul li{
-        margin:2%;
+    .welcome .paragraph h1 {
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 991px) {
+    .welcome {
+        margin: 10% auto;
+    }
+
+    .welcome img {
+        width: 50%;
+        height: 50%;
+    }
+
+    .welcome .paragraph h1 {
+        font-size: 25px;
+    }
+
+    .welcome .social-media ul li{
+        font-size:25px;
+        padding:2px 8px;
      }
 
-    .header .content .left-side .paragraphe h1 {
-        font-size: 40px;
+    .header ul {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .welcome .container {
+        flex-direction: column-reverse;
         text-align: center;
-        margin:10% 0;
+    }
+
+    .welcome .paragraph h1 {
+        font-size: 20px;
+        margin: 5%;
+    }
+
+    .welcome .social-media ul {
+        flex-wrap: wrap;
     }
 }
 /* END HEADER SECTION */
